# sistema-biblioteca

./: README.md  pyproject.toml  requirements.txt
biblioteca/: settings.py  urls.py
livro/: admin.py  models.py  urls.py  views.py
livro/migrations/: 0001_initial.py  0002_alter_emprestimos_options_alter_livros_options_and_more.py  0003_alter_emprestimos_data_emprestimo_and_more.py  0004_alter_emprestimos_data_emprestimo_and_more.py  0005_categorias_livros_categoria.py  0006_remove_emprestimos_duracao_emprestimo.py  0007_remove_emprestimos_nome_emprestado_and_more.py  0008_alter_emprestimos_livro_emprestado_and_more.py  0009_remove_emprestimos_pessoa_emprestado_and_more.py  0010_emprestimos_ativo.py
livro/templates/: cadastrar_livro.html  emprestimos.html  home.html  livro.html
livro/templatetags/: livro_extras.py
templates/: base.html
usuarios/: urls.py  views.py
usuarios/templates/: cadastro.html  login.html
